syntax = "proto3";
import "duration_dto.proto";
import "building_requirements_dto.proto";
import "worker_count_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message ConstructionComponentDTO {
  string id = 1;
  DurationDto build_time = 3;
  BuildingRequirementsDto requirements = 5;
  WorkerCountDto worker_count = 8;
}
