syntax = "proto3";
import "worker_type.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message GrantWorkerComponentDTO {
  string id = 1;
  optional int32 worker_count = 2;
  WorkerType worker_type = 3;
  string dynamic_values_id = 4;
}
