syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message GameDesignReference {
  string id = 1;
  string type = 2;
}
